fixed cards movement and alignment

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,10 @@ body {
   text-align: center;
 }
 
+.header-places {
+  margin-bottom: 20px;
+}
+
 .grid {
   display: grid;
   grid-gap: 64px;
@@ -44,8 +48,12 @@ body {
 }
 
 .card {
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-gap: 8px;
+  min-height: 30px;
   background-color: white;
-  margin-top: auto;
+  margin-top: 30px 0;
 }
 
 .card-header.grid {
@@ -61,8 +69,7 @@ body {
 }
 
 .btn {
-  display: flex;
-  flex-direction: column;
+  display: block;
   font-weight: 700;
   font-size: 14px;
   line-height: 21px;
